--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "Writing about code, electronics and other stuff"
 theme = "custom-theme"
 sectionPagesMenu = "main"
+enableRobotsTXT = true
 
 [sitemap]
 changefreq = 'monthly'
